[gd_scene load_steps=3 format=3 uid="uid://b3d6yhj8gj4vc"]

[ext_resource type="Script" path="res://Scripts/UI/EventModal.gd" id="1_1x8vd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="EventModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1x8vd")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="ModalPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="ModalPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0

[node name="HeaderContainer" type="HBoxContainer" parent="ModalPanel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="ModalPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Título del Evento"
autowrap_mode = 3

[node name="CloseButton" type="Button" parent="ModalPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
custom_minimum_size = Vector2(32, 32)
text = "X"

[node name="ContentContainer" type="VBoxContainer" parent="ModalPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EventImage" type="TextureRect" parent="ModalPanel/VBoxContainer/ContentContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 150)
expand_mode = 1
stretch_mode = 5

[node name="DescriptionLabel" type="RichTextLabel" parent="ModalPanel/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Descripción del evento aquí..."
autowrap_mode = 3

[node name="ChoicesContainer" type="VBoxContainer" parent="ModalPanel/VBoxContainer/ContentContainer"]
layout_mode = 2

[node name="FooterContainer" type="HBoxContainer" parent="ModalPanel/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="ModalPanel/VBoxContainer/FooterContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Continuar"